--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ li a:hover {
   z-index: 1;
 }
 
+iframe[seamless] {
+    border: none;
+}
+
 /* Links inside the dropdown */
 .dropdown-content a {
   color: black;
