--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ background-image: url("Pictures/background.gif");
 }
 
 #directions { 
- background-color: #ff4040; 
+ background-color: #c6e2ff; 
  width: 33.33%; 
 } 
 
