--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ background-image: url("Pictures/background.gif");
 
 #main-article { 
  background-color: white; 
+ float: center; 
+ width: 40%; 
 }
 
 #directions { 
